--- a/e-KYC_application/application/package.json
+++ b/e-KYC_application/application/package.json
@@ -11,6 +11,7 @@
     "license": "Apache-2.0",
     "dependencies": {
         "fabric-ca-client": "^2.2.0",
-        "fabric-network": "^2.2.0"
+        "fabric-network": "^2.2.0",
+        "prompt": "^1.1.0"
     }
 }
