--- a/e-KYC_chaincode/package.json
+++ b/e-KYC_chaincode/package.json
@@ -18,7 +18,8 @@
     "license": "Apache-2.0",
     "dependencies": {
         "fabric-contract-api": "^2.0.0",
-        "fabric-shim": "^2.0.0"
+        "fabric-shim": "^2.0.0",
+        "js-sha256": "^0.9.0"
     },
     "devDependencies": {
         "chai": "^4.1.2",
